syntax = "proto3";

package procession;

import "search.proto";
import "session.proto";
import "wrappers.proto";

// The top-most grouping of users of the system. A user may have permissions to
// read or take action within one or more Organizations.
message Organization {
    string uuid = 1;
    string display_name = 2;
    string slug = 3;
    StringValue parent_uuid = 4;
    uint32 generation = 100;
}

// RPC Request payload messages

message OrganizationGetRequest {
    Session session = 1;
    string search = 2;
}

message OrganizationSetFields {
    StringValue display_name = 1;
    StringValue parent_uuid = 2;
}

message OrganizationSetRequest {
    Session session = 1;
    StringValue search = 2;
    OrganizationSetFields changed = 3;
}

message OrganizationSetResponse {
    Organization organization = 1;
}

message OrganizationListFilters {
    repeated string uuids = 1;
    repeated string display_names = 2;
    repeated string slugs = 3;
}

message OrganizationListRequest {
    Session session = 1;
    OrganizationListFilters filters = 2;
    SearchOptions options = 3;
}

message OrganizationMembersSetRequest {
    Session session = 1;
    string organization = 2;
    repeated string add = 3;
    repeated string remove = 4;
}

message OrganizationMembersSetResponse {
    uint64 num_added = 1;
    uint64 num_removed = 2;
}
